# ImageParser

./: CMakeLists.txt  README.md  run.sh
src/: main.c  parser.c  renderer.c
src/include/: parser.h  renderer.h
tests/: pbm_p4.pbm  pgm_p5.pgm  ppm_p6.ppm  tga_24.tga  tga_32.tga  tga_rle.tga  tiff_baseline.tiff
